--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.proypet.user"
+        applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 7 //TODO: esto siempre debe aumentar
@@ -53,7 +53,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-// //TODO: esto debe estar activo para produccion
+//     //TODO: esto debe estar activo para produccion
 //     signingConfigs {
 //        release {
 //            keyAlias keystoreProperties['keyAlias']
