--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   geocoder: ^0.2.1
   firebase_messaging: ^6.0.15
   intl: ^0.16.1 #para formatos
+
+  email_validator: ^1.0.6
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
