--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,11 +45,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.user"
+        applicationId "com.proypet.user"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 9 //TODO: esto siempre debe aumentar
-        versionName "1.2.0" //TODO: esto siempre debe aumentar
+        versionCode 10 //TODO: esto siempre debe aumentar
+        versionName "1.2.1" //TODO: esto siempre debe aumentar
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
