--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,20 +46,21 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.user"
+        // applicationId "com.proypet.user"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 10 //TODO: esto siempre debe aumentar
-        versionName "1.2.1" //TODO: esto siempre debe aumentar
+        versionCode 11 //TODO: esto siempre debe aumentar
+        versionName "1.3.0" //TODO: esto siempre debe aumentar
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    //TODO: debe activarse release y desactivar debug
-    buildTypes {
-        release {
-            //    signingConfig signingConfigs.release
-            signingConfig signingConfigs.debug
-        }
-    }
+    // //TODO: debe activarse release y desactivar debug
+    // buildTypes {
+    //     release {
+    //         //    signingConfig signingConfigs.release
+    //         signingConfig signingConfigs.debug
+    //     }
+    // }
 
 //     //TODO: esto debe estar activo para produccion
 //     signingConfigs {
@@ -97,5 +98,5 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging:20.2.0' //para pruebas
     // implementation 'com.google.firebase:firebase-analytics:17.5.0' //para produccion
-     implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.facebook.android:facebook-login:[5,6)'
 }
