--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker:
   #fin imagenes
 
+  google_fonts: ^1.1.1
   google_maps_flutter: ^0.5.28+1
   geolocator: ^5.2.0
   google_maps_webservice: ^0.0.16
