--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # image_pickers: ^1.0.8+7
   #
 
+  flutter_email_sender: ^3.0.1
   #imagenes 
   # websafe_network_image: ^1.0.5
   cached_network_image: ^2.0.0
