--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=peru@123
 keyPassword=peru@123
 keyAlias=upload
-storeFile=keystore.jks
+storeFile=/Users/josealonsomassarolando/keystore.jks
