--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # image_picker_gallery_camera: ^0.1.6
   # image_pickers: ^1.0.8+7
   #
-
+  infinite_scroll_pagination: ^2.2.2
+  
   flutter_email_sender: ^3.0.1
   #imagenes 
   # websafe_network_image: ^1.0.5
