--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,16 @@ dependencies:
   image_cropper:
   image_picker: ^0.6.7+14
   #fin imagenes
-
+  
+  #nuevo calendar
   some_calendar: ^1.2.6
+  cupertino_stepper: ^0.1.2
   lottie: ^0.7.0+1
   image_sequence_animator: ^1.0.9
+  flutter_typeahead_web: ^1.0.0+1
 
+  ai_notification_enable: ^1.6.0
+  
   spritewidget: ^0.9.24
   flame: ^0.28.0
   flim: ^0.3.1
@@ -67,7 +72,7 @@ dependencies:
   badges: ^1.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: 
   
   #nuevos utiles
   get:
