--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,5 +89,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging:20.2.0' //para pruebas
     // implementation 'com.google.firebase:firebase-analytics:17.5.0' //para produccion
-    implementation 'com.facebook.android:facebook-login:[5,6)'
+    // implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.facebook.android:facebook-login:[8.1)'
+    // implementation 'com.facebook.android:facebook-login:[5,6)'
 }
