--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flim: ^0.3.1
   # featurestar: ^1.1.0
   # flutter_rating_bar: ^3.2.0+1
+  native_updater: ^0.0.3
+  package_info: ^0.4.3+2
   
   google_fonts: ^1.1.1
   google_maps_flutter: ^0.5.28+1
@@ -68,7 +70,8 @@ dependencies:
   intl: ^0.16.1 #para formatos
 
   email_validator: ^1.0.6
-  flutter_login_facebook: ^0.3.0
+  # flutter_login_facebook: ^0.3.0
+  flutter_login_facebook: ^0.4.1
   badges: ^1.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
