--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,60 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  ai_notification_enable: ^1.6.0
+  animate_do: ^1.6.3
+  badges: ^1.1.4  
+  cached_network_image: ^2.0.0
+  datetime_picker_formfield: ^1.0.0
+  dio: ^3.0.10
+  dio_http_cache: ^0.2.8
+  email_validator: ^1.0.6
+  firebase_messaging: ^6.0.15
+  flutter_email_sender: ^3.0.1
+  flutter_login_facebook: ^0.4.1 #login con facebook
+  flutter_rating_bar: ^3.0.1+1
+  flutter_swiper: ^1.1.6
+  font_awesome_flutter: ^8.8.0  
+  geolocator: ^5.2.0
+  geocoder: ^0.2.1
+  get:
+  get_storage:
+  google_fonts: ^1.1.1
+  google_maps_flutter: ^0.5.28+1
+  google_maps_webservice: ^0.0.16
+  google_sign_in: ^4.5.6 #login con google
+  http:
+  image_cropper:
+  image_picker: ^0.6.7+14
+  intl: ^0.16.1 #para formatos
+  lottie: ^0.7.0+1
+  map_launcher: ^0.4.5
+  mime_type:
+  overflow_view:
+  rxdart: ^0.23.1
+  select_dialog: ^1.2.1
+  sign_button: ^1.0.1
+  share: ^0.6.4+3
+  simple_autocomplete_formfield: ^0.2.7 #buscar con autocomplete 
+  time_parser: ^1.1.0
+  url_launcher: ^5.5.0
+  
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons:   
+
+  
+  # some_calendar: ^1.2.6 #nuevo calendar
+  # cupertino_stepper: ^0.1.2
+  # image_sequence_animator: ^1.0.9
+  # flutter_typeahead_web: ^1.0.0+1
+  # spritewidget: ^0.9.24
+  # flame: ^0.28.0
+  # flim: ^0.3.1
+  # featurestar: ^1.1.0
+  # flutter_rating_bar: ^3.2.0+1
+  # native_updater: ^0.0.3
+  # package_info: ^0.4.3+2
   # nuevos
   # launchers: ^0.4.6
   # whatsapp_unilink: ^1.0.0+1
@@ -34,93 +88,11 @@ dependencies:
   # image_picker_gallery_camera: ^0.1.6
   # image_pickers: ^1.0.8+7
   #
-  infinite_scroll_pagination: ^2.2.2
-  
-  flutter_email_sender: ^3.0.1
-  #imagenes 
+  # infinite_scroll_pagination: ^2.2.2
   # websafe_network_image: ^1.0.5
-  cached_network_image: ^2.0.0
-  image_cropper:
-  image_picker: ^0.6.7+14
-  #fin imagenes
-  
-  #nuevo calendar
-  some_calendar: ^1.2.6
-  cupertino_stepper: ^0.1.2
-  lottie: ^0.7.0+1
-  image_sequence_animator: ^1.0.9
-  flutter_typeahead_web: ^1.0.0+1
-
-  ai_notification_enable: ^1.6.0
-  
-  spritewidget: ^0.9.24
-  flame: ^0.28.0
-  flim: ^0.3.1
-  # featurestar: ^1.1.0
-  # flutter_rating_bar: ^3.2.0+1
-  native_updater: ^0.0.3
-  package_info: ^0.4.3+2
-  
-  google_fonts: ^1.1.1
-  google_maps_flutter: ^0.5.28+1
-  geolocator: ^5.2.0
-  google_maps_webservice: ^0.0.16
-  geocoder: ^0.2.1
-  firebase_messaging: ^6.0.15
-  intl: ^0.16.1 #para formatos
-
-  email_validator: ^1.0.6
   # flutter_login_facebook: ^0.3.0
-  flutter_login_facebook: ^0.4.1
-  badges: ^1.1.4
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 
-  
-  #nuevos utiles
-  get:
-  get_storage:
-  dio: ^3.0.10
-  dio_http_cache: ^0.2.8
-  time_parser: ^1.1.0
-  #fin nuevos utiles
-  
   # shared_preferences: ^0.5.12+2
-  overflow_view:
-  
-  
-
-  #animaciones
-  animate_do: ^1.6.3
-  #fin animaciones
-  
-  #fechas
-  datetime_picker_formfield: ^1.0.0
-  #fin fechas
-  
-  #estrellas (para votar)
-  flutter_rating_bar: ^3.0.1+1
-  #fin estrellas
-
-  #buscadores
-  simple_autocomplete_formfield: ^0.2.7 #buscar con autocomplete 
   # select_dialog: ^1.1.0 
-  select_dialog: ^1.2.1
-  #modal con bucador y lista
-  #fin buscadores
-  
-  #lanzadores (para abrir apps u otro)
-  map_launcher: ^0.4.5
-  url_launcher: ^5.5.0
-  #lanzadores
-
-  http:
-  flutter_swiper: ^1.1.6
-  font_awesome_flutter: ^8.8.0  
-  mime_type:
-  rxdart: ^0.23.1
-  share: ^0.6.4+3
-
   # flutter_local_notifications: ^1.4.3
   # get_it:
   # textfield_search: ^0.6.1
@@ -138,8 +110,6 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  # image_path: "images/icon/test.png"
-  # adaptive_icon_background: "images/icon/test.png"
   image_path: "images/icon/proypet-c.png"
   adaptive_icon_background: "images/icon/proypet-c.png"
 
