--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,11 +52,7 @@ dependencies:
   lottie: ^0.7.0+1
   map_launcher: ^0.4.5
   mime_type:
-  # dots_indicator: 1.2.0
-  # minimal_onboarding: ^1.0.0
-  # on_boarding_ui: ^0.0.4
-  # onboarding: ^1.0.5
-  # onboardme: ^1.2.0
+
   overflow_view:
   rxdart: ^0.23.1
   scrollable_positioned_list: ^0.1.8
@@ -71,7 +67,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:   
 
-  
+  # dots_indicator: 1.2.0
+  # minimal_onboarding: ^1.0.0
+  # on_boarding_ui: ^0.0.4
+  # onboarding: ^1.0.5
+  # onboardme: ^1.2.0
   # some_calendar: ^1.2.6 #nuevo calendar
   # cupertino_stepper: ^0.1.2
   # image_sequence_animator: ^1.0.9
@@ -137,8 +137,9 @@ flutter:
    - assets/map_style.txt
    - images/
    - images/gif/
-   - images/lottie/
    - images/icon/
+   - images/lottie/
+   - images/notificacion/
    - images/proypetip/
 
   # An image asset can refer to one or more resolution-specific "variants", see
