--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
     sdk: flutter    
   flutter_localizations:
     sdk: flutter
+  
+  cron: ^0.2.4
+  path_provider:
+  sqflite:
 
   ai_notification_enable: ^1.6.0
   animate_do: ^1.6.3
@@ -33,9 +37,10 @@ dependencies:
   email_validator: ^1.0.6
   firebase_messaging: ^6.0.15
   flutter_email_sender: ^3.0.1
+  flutter_local_notifications: ^3.0.2
   flutter_login_facebook: ^0.4.1 #login con facebook
-  # flutter_onboard: ^0.1.0
   flutter_rating_bar: ^3.0.1+1
+  flutter_svg_provider: ^0.1.8
   flutter_swiper: ^1.1.6
   font_awesome_flutter: ^8.8.0  
   geolocator: ^5.2.0
@@ -53,21 +58,22 @@ dependencies:
   lottie: ^0.7.0+1
   map_launcher: ^0.4.5
   mime_type:
-
   overflow_view:
   rxdart: ^0.23.1
   scrollable_positioned_list: ^0.1.8
   select_dialog: ^1.2.1
-  sign_button: ^1.0.1
   share: ^0.6.4+3
   simple_autocomplete_formfield: ^0.2.7 #buscar con autocomplete 
   time_parser: ^1.1.0
   url_launcher: ^5.5.0
   
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:   
 
+  # sign_button: ^1.0.1
+  # flutter_onboard: ^0.1.0
   # dots_indicator: 1.2.0
   # minimal_onboarding: ^1.0.0
   # on_boarding_ui: ^0.0.4
@@ -141,7 +147,7 @@ flutter:
    - images/icon/
    - images/lottie/
    - images/notificacion/
-   - images/proypetip/
+   - images/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
