--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,8 @@ dependencies:
   google_fonts: ^1.1.1
   google_maps_flutter: ^0.5.28+1
   google_maps_webservice: ^0.0.16
-  google_sign_in: ^4.5.6 #login con google
+  # google_sign_in: ^4.5.6 #login con google
+  google_sign_in: ^4.5.9 #login con google
   http:
   image_cropper: ^1.3.1
   image_picker: ^0.6.7+21
