--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   map_launcher: ^0.4.5
   mime_type:
   overflow_view:
+  package_info: ^0.4.3+2
   rxdart: ^0.23.1
   scrollable_positioned_list: ^0.1.8
   select_dialog: ^1.2.1
