--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,8 +45,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        // applicationId "com.example.user"
-        applicationId "com.proypet.user"
+        applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 13 //12 Ya aumente para la version 1.4.0
