--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   image_cropper: ^1.3.1
   image_picker: ^0.6.7+21
   intl: ^0.16.1 #para formatos
+  jiffy: ^3.0.1 #date 
   lottie: ^0.7.0+1
   map_launcher: ^0.4.5
   mime_type:
