--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,11 +45,11 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.proypet.user"
+        applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 14 //Ya aumente para la version 1.4.1
-        versionName "1.4.1" //TODO: esto siempre debe aumentar
+        versionCode 15 //Ya aumente para la version 1.4.2
+        versionName "1.4.2" //TODO: esto siempre debe aumentar
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -89,7 +89,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    // implementation 'com.google.firebase:firebase-messaging:20.2.0' //para pruebas
-    implementation 'com.google.firebase:firebase-analytics:17.5.0' //para produccion
+    implementation 'com.google.firebase:firebase-messaging:20.2.0' //para pruebas
+    // implementation 'com.google.firebase:firebase-analytics:17.5.0' //para produccion
     implementation 'com.facebook.android:facebook-login:[8.1)'
 }
