--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,7 @@
 APP_ID=com.proypet.user
 
+TEST=false
+
 KEY_MAP=AIzaSyAIU2POPaS1Lme5BXKIrHBm1Ohicmg9844
 URL=https://proypet.com
 URL_API=https://proypet.com/api
