--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,6 @@ dependencies:
   cached_network_image: ^2.0.0
   datetime_picker_formfield: ^1.0.0
   dotted_line: ^2.0.2
-  dio: ^3.0.10
-  dio_http_cache: ^0.2.8
   email_validator: ^1.0.6
   firebase_messaging: ^6.0.15
   flutter_conditional_rendering: ^1.1.1
@@ -77,6 +75,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:   
 
+  # dio: ^3.0.10
+  # dio_http_cache: ^0.2.8
   # sign_button: ^1.0.1
   # flutter_onboard: ^0.1.0
   # dots_indicator: 1.2.0
