--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.user">
+    package="com.proypet.user">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -21,11 +21,12 @@
         <activity android:name="com.facebook.FacebookActivity" 
             android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" /> 
         <activity android:name="com.facebook.CustomTabActivity" android:exported="true"> 
-            <intent-filter> 
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" /> 
                 <category android:name="android.intent.category.DEFAULT" /> 
                 <category android:name="android.intent.category.BROWSABLE" /> 
                 <data android:scheme="@string/fb_login_protocol_scheme" /> 
+                <data android:scheme="https" android:host="proypet.onelink.me" android:pathPrefix="/{onelinkID}" />
             </intent-filter> 
         </activity>
 
