--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,12 +25,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
-project.ext.envConfigFiles = [
-    debug: ".env.development",
-    release: ".env.production",
-    anothercustombuild: ".env",
-]
-apply from: project(':flutter_config').projectDir.getPath() + "/dotenv.gradle"
+// project.ext.envConfigFiles = [
+//     debug: ".env.development",
+//     release: ".env.production",
+//     anothercustombuild: ".env",
+// ]
+// apply from: project(':flutter_config').projectDir.getPath() + "/dotenv.gradle"
 
 //TODO: esto debe estar activo para produccion
 def keystoreProperties = new Properties()
@@ -52,11 +52,12 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId project.env.get("APP_ID")
+        // applicationId project.env.get("APP_ID")
+        applicationId "com.proypet.user"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 17 //1.4.4
-        versionName "1.4.4"
+        versionCode 21 //1.4.5
+        versionName "1.4.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -96,6 +97,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    implementation project.env.get("FIREBASE") //firebase
+    // implementation project.env.get("FIREBASE")
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.facebook.android:facebook-login:[8.1)'
 }
