--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,7 +53,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         // applicationId project.env.get("APP_ID")
-        applicationId "com.proypet.user"
+        applicationId "com.example.user"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 22 //1.4.5
