--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons:   
+  cupertino_icons: ^1.0.2
+
+  firebase_core: ^1.1.0
+  firebase_messaging: ^9.1.3
+  flutter_local_notifications: ^5.0.0+3
 
   get: ^4.1.4
   get_storage: ^2.0.2
@@ -39,7 +43,6 @@ dependencies:
   day_night_time_picker: ^1.0.1+1
   dotted_line: ^3.0.0
   email_validator: ^2.0.1
-  firebase_messaging: ^9.1.3 #observado
   flutter_conditional_rendering: ^2.0.0
   flutter_email_sender: ^5.0.0
   flutter_login_facebook: ^1.0.1
