--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   geocoder: ^0.2.1
   google_fonts: ^2.0.0
   google_maps_flutter: ^2.0.3
-  google_maps_webservice: ^0.0.19
+  # google_maps_webservice: ^0.0.19
   google_sign_in: ^5.0.2
   image_cropper: ^1.4.0
   image_picker: ^0.7.4
@@ -62,7 +62,7 @@ dependencies:
   jiffy: ^4.1.0 #observado #date 
   lottie: ^1.0.1
   mailer: ^5.0.0
-  map_launcher: ^2.0.0
+  # map_launcher: ^2.0.0
   mime_type: ^1.0.0
   overflow_view: ^0.3.1
   package_info: ^2.0.0
