--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-  # sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -54,25 +53,26 @@ dependencies:
   geocoder: ^0.2.1
   google_fonts: ^2.0.0
   google_maps_flutter: ^2.0.3
-  # google_maps_webservice: ^0.0.19
   google_sign_in: ^5.0.2
   image_cropper: ^1.4.0
   image_picker: ^0.7.4
   intl: ^0.17.0 #para formatos
-  jiffy: ^4.1.0 #observado #date 
   lottie: ^1.0.1
   mailer: ^5.0.0
-  # map_launcher: ^2.0.0
   mime_type: ^1.0.0
   overflow_view: ^0.3.1
   package_info: ^2.0.0
-  rxdart: ^0.26.0
   scrollable_positioned_list: ^0.1.10
   select_dialog: ^2.0.0
   share: ^2.0.1
   simple_autocomplete_formfield: ^0.3.0 #buscar con autocomplete 
   time_parser: ^1.1.0
   url_launcher: ^6.0.3
+
+  # rxdart: ^0.26.0
+  # jiffy: ^4.1.0 #observado #date 
+  # google_maps_webservice: ^0.0.19
+  # map_launcher: ^2.0.0
   
   
   # The following adds the Cupertino Icons font to your application.
