--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,8 +19,11 @@
 
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/> 
         <activity android:name="com.facebook.FacebookActivity" 
-            android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" /> 
-        <activity android:name="com.facebook.CustomTabActivity" android:exported="true"> 
+            android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" 
+            android:label="@string/app_name" /> 
+        <activity 
+            android:name="com.facebook.CustomTabActivity" 
+            android:exported="true"> 
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" /> 
                 <category android:name="android.intent.category.DEFAULT" /> 
