--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,12 @@ dependencies:
   # stories_for_flutter: ^0.1.8 #probando
   # story_view: 
   # flutter_stories: ^0.2.1+1
-
+  
+  # flutter_login_facebook: ^0.4.1 #login con facebook
+  # flutter_facebook_auth: ^3.3.3
+  flutter_facebook_auth: ^3.3.3-no-nullsafety
+  google_sign_in: ^4.5.9 #login con google
+  #
   ai_notification_enable: ^1.6.1 #activar notificaciones
   animate_do: ^2.0.0
   badges: ^1.2.0
@@ -48,7 +53,7 @@ dependencies:
   email_validator: ^2.0.1
   flutter_conditional_rendering: ^2.0.0
   flutter_email_sender: ^5.0.0
-  flutter_login_facebook: ^1.0.1
+  # flutter_login_facebook: ^1.0.1
   flutter_rating_bar: ^4.0.0
   flutter_svg_provider: ^0.1.9
   flutter_swiper: ^1.1.6 #deprecado
@@ -56,7 +61,7 @@ dependencies:
   geocoder: ^0.2.1
   google_fonts: ^2.0.0
   google_maps_flutter: ^2.0.3
-  google_sign_in: ^5.0.2
+  # google_sign_in: ^5.0.2
   image_cropper: ^1.4.0
   image_picker: ^0.7.4
   intl: ^0.17.0
