--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter    
+    sdk: flutter
   flutter_localizations:
     sdk: flutter
 
@@ -35,11 +35,11 @@ dependencies:
   supabase: ^0.0.1-dev.17
 
   flutter_config: ^2.0.0 #^1.0.8
-  
+
   # stories_for_flutter: ^0.1.8 #probando
-  # story_view: 
+  # story_view:
   # flutter_stories: ^0.2.1+1
-  
+
   # flutter_login_facebook: ^0.4.1 #login con facebook
   # flutter_facebook_auth: ^3.3.3
   flutter_facebook_auth: ^3.3.3-no-nullsafety
@@ -54,6 +54,7 @@ dependencies:
   dotted_line: ^3.0.0
   email_validator: ^2.0.1
   flutter_conditional_rendering: ^2.0.0
+  flutter_dotenv: ^5.0.0
   flutter_email_sender: ^5.0.0
   # flutter_login_facebook: ^1.0.1
   flutter_rating_bar: ^4.0.0
@@ -78,7 +79,7 @@ dependencies:
   simple_autocomplete_formfield: ^0.3.0 #buscar con autocomplete
   time_parser: ^1.1.0
   url_launcher: ^6.0.3
-  
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
@@ -92,13 +93,11 @@ flutter_icons:
   image_path: "images/icon/proypet-c.png"
   adaptive_icon_background: "images/icon/proypet-c.png"
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -106,16 +105,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/map_style.txt
-   - images/
-   - images/cat_dog/
-   - images/gif/
-   - images/icon/
-   - images/lottie/
-   - images/marker/
-   - images/notificacion/
-   - images/shop/
-   - images/svg/
+    - assets/.env
+    - assets/map_style.txt
+    - images/
+    - images/cat_dog/
+    - images/gif/
+    - images/icon/
+    - images/lottie/
+    - images/marker/
+    - images/notificacion/
+    - images/shop/
+    - images/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
