--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,7 +105,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/.env
+    - .env
+    - .env.dev
     - assets/map_style.txt
     - images/
     - images/cat_dog/
