--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.user"
+        applicationId "com.proypet.user"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 22
@@ -90,7 +90,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     // FIREBASE
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    // implementation 'com.google.firebase:firebase-analytics:17.5.0'
     // FB
     implementation 'com.facebook.android:facebook-login:[8.1)'
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:28.2.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
