--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  
+  firebase_core: 
+  firebase_messaging: 
+  
   font_awesome_flutter: ^9.0.0
-
-  # firebase_core: ^1.3.0
-  firebase_messaging: ^10.0.3
-  # flutter_local_notifications: ^5.0.0+3
 
   get: ^4.1.4
   get_storage: ^2.0.2
